Sign document + fix api